# Budget_Tracker

./: .env  .env.production  .gitignore  Cargo.toml  Dockerfile  README.md  cleanup.ps1  deploy.sh  docker-compose.yml  sqlx-data.json  vm-setup.md
migrations/: 001_initial.sql
src/: app.rs  auth.rs  budget.rs  database.rs  handlers.rs  main.rs  models.rs
src/db/: mod.rs  operations.rs  schema.rs
src/models/: budget.rs  category.rs  mod.rs  transaction.rs
src/ui/: budget.rs  dashboard.rs  mod.rs  transaction.rs
src/ui/components/: budget_form.rs  charts.rs  datepicker.rs  mod.rs  nav.rs  transaction_form.rs
src/utils/: mod.rs
static/: index.html  script.js  styles.css
