[package]
name = "budget_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
iced_aw = "0.12"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
directories = "5.0"
once_cell = "1.0"
plotters = "0.3"
plotters-iced = "0.9"
