[package]
name = "budget_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
anyhow = "1.0"
dotenvy = "0.15"
axum-extra = { version = "0.9", features = ["cookie"] }
bigdecimal = { version = "0.3", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Pin problematic dependencies to compatible versions
base64ct = "=1.6.0"
